--- a/my-first-project/.vscode/settings.json
+++ b/my-first-project/.vscode/settings.json
@@ -14,5 +14,5 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true,
     },
-    "editor.formatOnSave": false
+    // "editor.formatOnSave": false
 }
