--- a/my-first-project/.vscode/settings.json
+++ b/my-first-project/.vscode/settings.json
@@ -14,5 +14,8 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true,
     },
-    "editor.formatOnSave": false
+    // "[typescript]": {
+    //     "editor.formatOnSave": true,    
+    // },
+    "editor.formatOnSave": false,
 }
